fix wrong background color

--- a/css/style.scss
+++ b/css/style.scss
@@ -305,6 +305,7 @@ ul {
 	}
 
 	.author-text {
+		font-size: 24px;
 		text-align: center;
 		margin-top: 30px;
 
@@ -539,8 +540,8 @@ ul {
 		}
 
 		@media (min-width: $screen-md-min) {
-			width: 70%;
-			margin-left: 15%;
+			width: 80%;
+			margin-left: 10%;
 		}
 
 		@media (min-width: $screen-lg-min) {
@@ -614,7 +615,7 @@ ul {
 				color: white;
 				box-sizing: content-box;
 				border: none;
-				font-size: 28px;
+				font-size: 24px;
 
 				@media (min-width: $screen-sm-min) {
 					margin-left: -30px;
